Add last correction

--- a/rapport/rapport-iaps.tex
+++ b/rapport/rapport-iaps.tex
@@ -32,10 +32,7 @@ Il est évident de préciser que le projet se base principalement sur la concept
 	\item \textbf{Mécaniques de jeu} : décortique comment nous avons construit la structure du jeu et comment nous avons représenté et implémenté le jeu et ses règles en informatique.
 	\item \textbf{ChatBot explicateur} : décrit la construction du ChatBot et apporte des informations concernant certaines de ses particularités.
 	\item \textbf{Interface} : décrit la construction de l'interface web du jeu et son organisation.
-	\item \textbf{Intelligence artificielle adversaire} : décrit la construction de l'intelligence artificielle que le joueur va combattre et son fonctionnement.\newline
 \end{enumerate}
-
-Enfin, comme pour tout rapport, nous terminerons par une conclusion dans laquelle nous expliquerons notre ressenti par rapport au projet. Nous expliciterons ce que nous avons trouvé comme points forts et points faibles du projet. Nous aborderons également des pistes pour améliorer le projet.
 
 \newpage
 
@@ -76,7 +73,7 @@ L'initialisation de la partie permet de récupérer un état initial du jeu :
 \end{figure}
 Chaque joueur joue à tour de role, pour ce faire, il sélectionne la carte dans le tableau qu'il souhaite joueur.
 A partir de ce clic, toute la page se met à jour afin d'afficher la nouvelle position du joueur sur le plateau de jeu et dans le tableau.
-La partie \texbf{Bot de jeu} permet d'avoir quelques petites informations sur les actions effectuées par d'autres joueurs.
+La partie \textbf{Bot de jeu} permet d'avoir quelques petites informations sur les actions effectuées par d'autres joueurs.
 
 Toujours dans cette partie, le petit bouton avec l'ampoule permet d'aider un joueur lorsqu'il est perdu et ne sait pas quelle carte jouer.
 Une notification sera affichée en donnant la meilleure carte à jouer pour le joueur.
